--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: python
 python:
   - "3.5"
 cache: pip
+install:
+- pip install flake8 pylint
 script:
 - flake8 han_solo --max-line-length=120
 - pylint han_solo --max-line-length=120
